--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+# Curtain control for ESP8266
+
+- Webinterface to open/close curtains
+- Scheduled tasks
+
 # Components
 
 https://github.com/PaulStoffregen/TimeAlarms
